<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AlarmClock</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label">Label</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="fab_quickAlarm">Add new alarm</string>
    <string name="defTime">00:00</string>
    <string name="TurnOff">Off</string>
    <string name="alarmSaved">Alarm Saved</string>
    <string name="alarmSet">Alarm set</string>
    <string name="alarmCanceled">Alarm canceled</string>
    <string name="ring">RING</string>
    <string name="tvLabel">label</string>
    <string name="dialogPositive">Yes</string>
    <string name="dialogNegative">Cancel</string>
    <string name="dialogMessage">Can i delete this alarm?</string>

</resources>
